# fantasy_football_predictions

./: .travis.yml  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  games-data.csv  pyproject.toml  requirements.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/config/: settings.py
src/data/games/: collect_games_data.py  transform_games_data.py  upload_games_data_to_bq.py
src/data/games_stadiums_teams/: collect_games_stadiums_teams_data.py  transform_games_data.py  transform_stadiums_data.py  transform_teams_data.py  upload_games_stadiums_teams_data_to_bq.py
src/data/player_game_stats/: collect_player_game_stats_data.py  transform_player_game_stats_data.py  upload_player_game_stats_data.py
src/data/players/: collect_basic_player_data.py  transform_player_data.py  upload_player_data_to_bq.py
src/db/: setup_bigquery.py  truncate_tables.py
src/db/schema/: create_games_table.py  create_player_game_stats_table.py  create_player_seasons_table.py  create_players_table.py  create_stadiums_table.py  create_teams_table.py
src/db/update_table_scripts/: update_games_stadiums_teams_table.py  update_games_table.py  update_player_game_stats_table.py  update_players_table.py
src/fantasy_football_predictions/: __init__.py  cli.py
src/utils/: bigquery_helpers.py
tests/: __init__.py  test_fantasy_football_predictions.py
