[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fantasy_football_predictions"
version = "0.1.0"
description = "Takes in historical data to predict the following 17 weeks of fantasy points scored for a given player"
readme = "README.rst"
authors = [
  {name = "Jacque Boudreaux", email = "jacqueboud77@gmail.com"}
]
maintainers = [
  {name = "Jacque Boudreaux", email = "jacqueboud77@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/jbou77/fantasy_football_predictions/issues"
changelog = "https://github.com/jbou77/fantasy_football_predictions/blob/master/changelog.md"
homepage = "https://github.com/jbou77/fantasy_football_predictions"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

